# old_wyrd

./: CMakeLists.txt  CMakeSettings.json
apps/: CMakeLists.txt
apps/appcommon/: arcballcamera.h  simplepadcamera.h
apps/gfxtest/: CMakeLists.txt  basicmeshtest.cpp  duckgltf.cpp  gfxtest.cpp  gfxtest.h  sponzagltftest.cpp  sponzatest.cpp  tacmapgltftest.cpp
apps/pp_viewer/: CMakeLists.txt  fakeclient.cpp  fakeclient.h  pp_viewer.cpp  server.cpp  server.h
apps/replay/: CMakeLists.txt  fakeclient.cpp  replayapp.cpp  server.cpp
apps/tester/: CMakeLists.txt
apps/tester/core/: freelist_unittest.cpp  math_unittest.cpp
apps/tester/meshops/: convexhullcomputer_unittest.cpp
apps/tester/render/: generictextureformat_unittest.cpp  image_unittest.cpp
apps/tester/resourcemanager/: resourcemanager_unittest.cpp  resourcename_unittest.cpp
apps/tools/vulkaninfo/: CMakeLists.txt  vulkaninfo.cpp
binify/: CMakeLists.txt  binify.cpp  binify.h  binify_c_api.h
libs/: CMakeLists.txt
libs/binify/: binify.cpp  binify_c_api.h  scanner.cpp
libs/binny/: CMakeLists.txt  bundle.cpp  bundle.h  bundlewriter.cpp  ibundle.h  inmembundle.h  writehelper.cpp  writehelper.h
libs/cityhash/: city.h
libs/core/: CMakeLists.txt  any.h  core.h  filesystem.h  freelist.h  platform_posix.h  quick_hash.h  utils.h
libs/cx/: cx_array.h
libs/geometry/: aabb.h  kdtree.cpp  rasteriser.h  ray.cpp
libs/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_rectpack.h  imstb_truetype.h
libs/imgui/examples/: imgui_impl_allegro5.cpp  imgui_impl_allegro5.h  imgui_impl_dx10.cpp  imgui_impl_dx10.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_freeglut.cpp  imgui_impl_freeglut.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_marmalade.cpp  imgui_impl_marmalade.h  imgui_impl_metal.h  imgui_impl_metal.mm  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_osx.h  imgui_impl_osx.mm  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_win32.cpp  imgui_impl_win32.h
libs/input/: CMakeLists.txt
libs/level1/: CMakeLists.txt
libs/level1/binny/: bundle.cpp  bundlewriter.cpp  bundlewriter.h  ibundle.h  inmembundle.h
libs/level1/input/: CMakeLists.txt  input.h  keyboard.h  keyboardmouselistenerimpl.cpp  keyboardmouselistenerimpl.h  keylist.h  mouse.h  osx.mm  osx_keycodes.h  provider.h  vpadlistener.h  windows.cpp
libs/level1/math/: CMakeLists.txt  colourspace.h  scalar_math.h  vector_math.cpp  vector_math.h
libs/level1/net/: CMakeLists.txt  basicpayload.h  context.cpp  context.h  tcpconnection.cpp  tcpconnection.h  tcpresolver.cpp  tcpresolver.h  tcpsimpleserver.cpp  tcpsimpleserver.h
libs/level1/timing/: CMakeLists.txt  pulsar.h  tickerclock.cpp  tickerclock.h
libs/level2/: CMakeLists.txt
libs/level2/geometry/: CMakeLists.txt  aabb.h  (+11 more)
libs/level3/: CMakeLists.txt
libs/level4/: CMakeLists.txt
libs/level5/: CMakeLists.txt
libs/level6/: CMakeLists.txt
libs/math/: scalar_math.h  vector_math.h  vector_math_c.h
libs/meshmod/: mesh.h  polygons.h  scenenode.h  transform.h  types.h  varicontainer.h  vertices.cpp
libs/meshops/: CMakeLists.txt  basicmeshops.cpp  basicmeshops.h  convexhullcomputer.cpp  convexhullcomputer.h  gltf.cpp  gltf.h  meshsorter.cpp  meshsorter.h  platonicsolids.cpp  platonicsolids.h  raycaster.cpp  raycaster.h  textureunit.cpp  textureunit.h
libs/midrender/: stocks.cpp  stocks.h
libs/playfield/: hexfield.h
libs/render/: CMakeLists.txt  bindingtable.cpp  bindingtable.h  buffer.cpp  buffer.h  commandqueue.cpp  commandqueue.h  device.h  display.h  encoder.h  gtfcracker.h  image.cpp  image.h  image.inl  image_fetch.inl  image_put.inl  pipeline.cpp  pipeline.h  queue.cpp  queue.h  rasterisationstate.cpp  rasterisationstate.h  renderpass.cpp  renderpass.h  rendertarget.cpp  rendertarget.h  rendertargets.h  resourcehandlers.cpp  resourcehandlers.h  resources.cpp  resources.h  ropblender.cpp  ropblender.h  shader.cpp  stable.h  texture.cpp  texture.h  types.h  vertexinput.cpp  viewport.h
libs/resourcemanager/: CMakeLists.txt  base.h  diskstorage.h  istorage.h  memstorage.h  resource.h  resourcecache.cpp  resourcecache.h  resourcehandle.h  resourceid.h  resourceman.cpp  resourceman.h  resourcename.h  textresource.cpp  textresource.h  writer.h
libs/shaderc/: CMakeLists.txt
libs/shell/: CMakeLists.txt  cmdline.cpp  cmdline.h  consoleapp.cpp  interface.h  posixshell.cpp  posixshell.h  shell.cpp  shell.h  winshell.cpp
libs/tacticalmap/: CMakeLists.txt  builder.cpp  stitcher.cpp  stitcher.h  tacticalmap.h
libs/vulkan/: CMakeLists.txt  api.cpp  api.h  bindingtable.cpp  bindingtable.h  buffer.cpp  commandqueue.cpp  commandqueue.h  computeencoder.cpp  computeencoder.h  device.cpp  device.h  display.cpp  display.h  encoder.cpp  encoder.h  encoderpool.cpp  encoderpool.h  fence.h  functionlist.inl  image.cpp  image.h  pipeline.cpp  pipeline.h  queue.cpp  queue.h  renderencoder.cpp  renderencoder.h  renderpass.cpp  renderpass.h  rendertarget.cpp  rendertarget.h  rendertargets.cpp  rendertargets.h  resources.cpp  resources.h  semaphore.cpp  semaphore.h  shadermodule.cpp  shadermodule.h  (+8 more)
tester/: CMakeLists.txt  tester  tester.cpp
tester/binny/: bundle_unittest.cpp
tester/core/: freelist_unittest.cpp  quick_hash_unittest.cpp
tester/cutils/: cutils_unittest.cpp
tester/math/: scalar_math_unittest.cpp
tester/render/: image_unittest.cpp
tester/resourcemanager/: resourcemanager_unittest.cpp
tester/vulkan/: system_unittest.cpp
tools/vulkaninfo/: CMakeLists.txt
unity_dlls/: CMakeLists.txt  cgeometryengine.cpp  cgeometryengine.h  ctacticalmap.cpp  ctacticalmap.h  cutils.cpp  cutils.h  ncoproxy.cpp
viz/: CMakeLists.txt  README.md  guizmo_math.h  imgui.ini  json.h  main.cpp  optional_wrapper.h  propertyeditor.h  vectordisplay.cpp
viz/Imgui-IGS-Snippet/: ImguiWindowsFileIO.cpp  ImguiWindowsFileIO.hpp
viz/shaders_src/: fs_basic.sc  vs_basic.sc
(+368 files in other folders)
