cmake_minimum_required(VERSION 3.10)
project(wyrd)
set(CMAKE_CXX_STANDARD 17)

include (cmake/VcMacros.cmake)
include (cmake/AddTargetProperty.cmake)
include (cmake/OptimizeForArchitecture.cmake)

vc_set_preferred_compiler_flags(WARNING_FLAGS BUILDTYPE_FLAGS)
add_compile_options(${Vc_COMPILE_FLAGS})
add_compile_options(${Vc_ARCHITECTURE_FLAGS})
set(_ok FALSE)
AddCompilerFlag("-xAVX" CXX_FLAGS CMAKE_CXX_FLAGS CXX_RESULT _ok)
if(NOT _ok)
	AddCompilerFlag("-mavx" CXX_FLAGS CMAKE_CXX_FLAGS CXX_RESULT _ok)
endif()
if(NOT _ok)
	AddCompilerFlag("/arch:AVX" CXX_FLAGS CMAKE_CXX_FLAGS CXX_RESULT _ok)
endif()

add_subdirectory(libs)

option(BUILD_TOOLS "Build tools folder." ON)
option(BUILD_TESTER "Build the tester app." ON)
option(BUILD_GFXTEST "Build the gfx test app." ON)
option(BUILD_VIZ "Build the dvisualiser." OFF)

if (BUILD_TOOLS)
	add_subdirectory(tools/vulkaninfo)
endif (BUILD_TOOLS)
if(BUILD_TESTER)
	add_subdirectory(tester)
endif(BUILD_TESTER)
if(BUILD_GFXTEST)
	add_subdirectory(gfxtest)
endif(BUILD_GFXTEST)
if(BUILD_VIZ)
	add_subdirectory(viz)
endif(BUILD_VIZ)