cmake_minimum_required(VERSION 3.10)
project(wyrd)
set(CMAKE_CXX_STANDARD 17)

option(BUILD_TOOLS "Build tools folder." ON)
option(BUILD_TESTER "Build the tester app." ON)
option(BUILD_APPS "Build the apps." ON)
option(BUILD_VIZ "Build the dvisualiser." OFF)
option(BUILD_UNITY_PLUGINS "Build the unity plugins." ON )
option(OPTIMIZE_FOR_AVX2 "whether to use the AVX2 (and before) ISA." ON)

include (cmake/VcMacros.cmake)
include (cmake/AddTargetProperty.cmake)
include (cmake/OptimizeForArchitecture.cmake)

if(OPTIMIZE_FOR_AVX2)
vc_set_preferred_compiler_flags(WARNING_FLAGS BUILDTYPE_FLAGS)
add_compile_options(${Vc_COMPILE_FLAGS})
add_compile_options(${Vc_ARCHITECTURE_FLAGS})
set(_ok FALSE)
AddCompilerFlag("-xAVX2" CXX_FLAGS CMAKE_CXX_FLAGS CXX_RESULT _ok)
if(NOT _ok)
	AddCompilerFlag("-mavx2" CXX_FLAGS CMAKE_CXX_FLAGS CXX_RESULT _ok)
endif()
if(NOT _ok)
	AddCompilerFlag("/arch:AVX2" CXX_FLAGS CMAKE_CXX_FLAGS CXX_RESULT _ok)
endif()
if(_ok)
	message("AVX2 compiler optimisations engaged")
endif(_ok)
endif(OPTIMIZE_FOR_AVX2)

add_subdirectory(libs)

if(BUILD_APPS)
	add_subdirectory(apps)
endif(BUILD_APPS)

#if(BUILD_UNITY_PLUGINS)
	add_subdirectory(unity_dlls)
#endif(BUILD_UNITY_PLUGINS)

if(BUILD_VIZ)
	add_subdirectory(viz)
endif(BUILD_VIZ)